cmake_minimum_required(VERSION 3.15)
project(Compiler)

set(CMAKE_CXX_STANDARD 17)

add_executable(Compiler main.cpp
        lexer/Token.cpp
        lexer/Token.h
        lexer/Lexer.cpp
        lexer/Lexer.h
        core/Compiler.cpp
        core/Compiler.h
        error/CompilerException.cpp
        error/CompilerException.h
        error/ErrorReporter.cpp
        error/ErrorReporter.h
        parser/Parser.cpp
        parser/Parser.h
        lexer/TokenStream.cpp
        lexer/TokenStream.h
        parser/AbstractSyntaxTree.cpp
        parser/AbstractSyntaxTree.h
        core/Logger.cpp
        core/Logger.h
        parser/ASTVisitor.cpp
        parser/ASTVisitor.h
        util/util.h
        semantic/Symbol.cpp
        semantic/Symbol.h
        semantic/SymbolTable.cpp
        semantic/SymbolTable.h
        semantic/SemanticVisitor.cpp
        semantic/SemanticVisitor.h
        core/Scope.cpp
        core/Scope.h
        util/util.cpp
        llvm/LLVM.cpp
        llvm/LLVM.h
        llvm/IRBuilder.cpp
        llvm/IRBuilder.h
        llvm/SlotTracker.cpp
        llvm/SlotTracker.h
        mips/MIPSBuilder.cpp
        mips/MIPSBuilder.h
        mips/MIPS.cpp
        mips/MIPS.h
        mips/Frame.cpp
        mips/Frame.h
        llvm/Pass.cpp
        llvm/Pass.h
        llvm/Mem2Reg.cpp
        llvm/Mem2Reg.h
        llvm/GCM.cpp
        llvm/GCM.h
        llvm/DeadCode.cpp
        llvm/DeadCode.h
        llvm/EliminatePhis.cpp
        llvm/EliminatePhis.h
        llvm/AllocateRegisters.cpp
        llvm/AllocateRegisters.h
        llvm/RegAllocator.cpp
        llvm/RegAllocator.h
        llvm/SaveArgument.cpp
        llvm/SaveArgument.h
)

add_definitions(-DPRINT_LEXER)
add_definitions(-DPRINT_PARSER)
add_definitions(-DPRINT_SYMBOL)
add_definitions(-DPRINT_ERROR)