cmake_minimum_required(VERSION 3.15)
project(Compiler)

set(CMAKE_CXX_STANDARD 17)

add_executable(Compiler main.cpp
        lexer/Token.cpp
        lexer/Token.h
        lexer/Lexer.cpp
        lexer/Lexer.h
        core/Compiler.cpp
        core/Compiler.h
        error/CompilerException.cpp
        error/CompilerException.h
        error/ErrorReporter.cpp
        error/ErrorReporter.h
        parser/Parser.cpp
        parser/Parser.h
        lexer/TokenStream.cpp
        lexer/TokenStream.h
        parser/AbstractSyntaxTree.cpp
        parser/AbstractSyntaxTree.h
        core/Logger.cpp
        core/Logger.h
        parser/ASTVisitor.cpp
        parser/ASTVisitor.h
        util/util.h
        semantic/Symbol.cpp
        semantic/Symbol.h
        semantic/SymbolTable.cpp
        semantic/SymbolTable.h
        semantic/SemanticVisitor.cpp
        semantic/SemanticVisitor.h
        core/Scope.cpp
        core/Scope.h
        util/util.cpp
        llvm/LLVM.cpp
        llvm/LLVM.h
        llvm/IRBuilder.cpp
        llvm/IRBuilder.h
        llvm/SlotTracker.cpp
        llvm/SlotTracker.h
        mips/MIPSBuilder.cpp
        mips/MIPSBuilder.h
        mips/MIPS.cpp
        mips/MIPS.h
        mips/Frame.cpp
        mips/Frame.h
        pass/Pass.cpp
        pass/Pass.h
        pass/Mem2Reg.cpp
        pass/Mem2Reg.h
        pass/GCM.cpp
        pass/GCM.h
        pass/DeadCode.cpp
        pass/DeadCode.h
        pass/EliminatePhis.cpp
        pass/EliminatePhis.h
        pass/AllocateRegisters.cpp
        pass/AllocateRegisters.h
        pass/RegAllocator.cpp
        pass/RegAllocator.h
        pass/SaveArgument.cpp
        pass/SaveArgument.h
        pass/AnalyzeSideEffect.cpp
        pass/AnalyzeSideEffect.h
        pass/AnalyzeSideEffect.h
        pass/PassManager.cpp
        pass/PassManager.h
        pass/AnalyzeDominance.cpp
        pass/AnalyzeDominance.h
        pass/MemorySSA.cpp
        pass/MemorySSA.h
        llvm/Memory.cpp
        llvm/Memory.h
        pass/GVN.cpp
        pass/GVN.h
)

add_definitions(-DPRINT_LEXER)
add_definitions(-DPRINT_PARSER)
add_definitions(-DPRINT_SYMBOL)
add_definitions(-DPRINT_ERROR)